<?xml version="1.0" encoding="utf-8" ?> 
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
	<TextView android:id="@+id/intro"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/enter_some_text"
        tools:context=".MainActivity"
	/>
	<EditText android:id="@+id/enter"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	/>
	<Button android:id="@+id/speak"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/speak"
	/>
	<TextView android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/intro"
	    android:padding="5dp"
	    android:textStyle="bold"
	    android:textSize="16dp"
	    android:gravity="center"
	    android:textColor="#ffffff33"
    />
	<Button android:id="@+id/listen_btn"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/listen"
    />
	<TextView android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:padding="5dp"
	    android:text="@string/word_intro"
	    android:textStyle="italic"
    />
	<ListView android:id="@+id/word_list"
	    android:layout_width="fill_parent"
	    android:layout_height="0dip"
	    android:layout_weight="1"
	    android:paddingLeft="10dp"
	    android:paddingTop="3dp"
	    android:paddingRight="10dp"
	    android:paddingBottom="3dp"
	    android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:layout_marginTop="5dp"
	    android:layout_marginBottom="5dp"
	    android:background="@drawable/words_bg"
    />
</LinearLayout>
